--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -300,5 +300,8 @@
     
 }
 
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
